--- a/demo/index.html
+++ b/demo/index.html
@@ -6,61 +6,249 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
 </head>
 
 <body>
     <div class="wrapper">
         <div class="header">
-            <ul class="header-1">
-                <li id="aboutus">About Us
-
-                </li>
-                <li id="signin">SIGN IN</li>
+            <ul class="header-top">
+                <li class="aboutus">ABOUT US</li>
+                <li class="signin">SIGN IN</li>
             </ul>
             <div class="logo"></div>
-
-            <ul id="icon">
-                <li>?</li>
-                <li>?</li>
-                <li>?</li>
+            <ul class="icon-of-header">
+                <li><i class="fa-question-circle icon-question-first"></i></li>
+                <li><i class="fa-question-circle icon-question-second"></i></li>
+                <li><i class="fa-question-circle icon-question-third"></i></li>
             </ul>
-            <ul id="feature">
+            <ul class="feature">
                 <li class="better">Better</li>
                 <li class="faster">Faster</li>
                 <li class="together">Together</li>
             </ul>
-            <p class="header-2">Lorem Ipsum is simply dummy text of the printing and typesetting industrys</p>
-            <p class="header-3">START NOW</p>
+            <p class="header-text">Lorem Ipsum is simply dummy text of the printing and typesetting industrys</p>
+            <p class="header-btn">START NOW</p>
 
         </div>
-        <div class="content">
-            <div class="content-1">
-                <div class="img"></div>
+        <div class="menu-one">
+            <div class="content-one">
+                <div class="interface-one"></div>
                 <div class="text">
-                    <p id="text1">Today I learnt <br></p>
-                    <p id="text2"><i>Lorem Ipsum is simply dummy text of the printing and typesetting industry</i> <br></p>
-                    <p id="text3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has <br> been the industry's standard dummy text ever since the 1500s, when an unknown printer took a <br>galley of type and scrambled it to make
+                    <p class="text-one"><i class="fa-question-circle question-option"></i>Today I learnt <br></p>
+                    <p class="text-two"><i>Lorem Ipsum is simply dummy text of the printing and typesetting industry</i> <br></p>
+                    <p class="text-three">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has <br> been the industry's standard dummy text ever since the 1500s, when an unknown printer took a <br>galley of type and scrambled it to make
                         a type specimen book. It has survived not only five <br> centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was <br> popularised in the 1960s with the release of Letraset sheets containing
                         Lorem Ipsum passages, <br> and more recently with desktop publishing software like Aldus PageMaker including versions of <br> Lorem Ipsum.</p>
-                    <p class="btn1">START NOW</p>
+                    <p class="btn-one">START NOW</p>
                 </div>
             </div>
         </div>
-        <div class="menu">
-            <div class="content-2">
+        <div class="menu-two">
+            <div class="content-two">
                 <div class="right">
-                    <p id="right1">Daily report </p>
-                    <p id="right2">Lorem Ipsum is simply dummy text of the printing and typesetting industry<br></p>
-                    <p id="right3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+                    <p class="right-one"><i class="fa-question-circle question-option"></i>Daily report </p>
+                    <p class="right-two">Lorem Ipsum is simply dummy text of the printing and typesetting industry<br></p>
+                    <p class="right-three">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
                         specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
                         passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                    <p class="btn2">START NOW</p>
+                    <p class="btn-two">START NOW</p>
                 </div>
-                <div class="img2"></div>
-
-
+                <div class="interface-two"></div>
             </div>
+        </div>
+        <div class="banner">
+            <div class="list-of-banner-one">
+                <div class="list-one">
+                    <i class="far fa-question-circle list-question-first"></i>
+                </div>
+            </div>
+            <div class="list-of-banner-one">
+                <div class="list-two">
+                    <span>1</span>
+                </div>
+                <p>DAILY<br>REPORT
+                </p>
+            </div>
+            <div class="list-of-banner-two">
+                <div class="list-one">
+                    <i class="far fa-question-circle list-question-second"></i>
+                </div>
+            </div>
+            <div class="list-of-banner-two">
+                <div class="list-two">
+                    <span>2</span>
+                </div>
+                <p>WRITE<br>TIL
+                </p>
+            </div>
+            <div class="list-of-banner-three">
+                <div class="list-one">
+                    <i class="far fa-question-circle list-question-third"></i>
+                </div>
+            </div>
+            <div class="list-of-banner-three">
+                <div class="list-two">
+                    <span>3</span>
+                </div>
+                <p>MANAGERS<br>MEMBERS
+                </p>
+            </div>
+            <div class="list-of-banner-four">
+                <div class="list-one">
+                    <i class="far fa-question-circle list-question-four"></i>
+                </div>
+            </div>
+            <div class="list-of-banner-four">
+                <div class="list-two">
+                    <span>4</span>
+                </div>
+                <p>MANAGERS<br>CUSTEMERS
+                </p>
+            </div>
+            <div class="list-of-banner-five">
+                <div class="list-one">
+                    <i class="far fa-question-circle list-question-five"></i>
+                </div>
+            </div>
+            <div class="list-of-banner-five">
+                <div class="list-two">
+                    <span>5</span>
+                </div>
+                <p>MANAGERS<br>PROJECTS</p>
+            </div>
+        </div>
+        <div class="menu-three">
+            <div class="content-three">
+                <p class="text-one"><i class="fa-question-circle question-option"></i>Members</p>
+                <p class="text-two">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                <p class="text-three"><i class="far fa-question-circle question-option"></i>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s … when an unknown printer took
+                    a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release
+                    of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <p class="text-four"><i class="far fa-question-circle question-option"></i>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s … when an unknown printer took
+                    a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release
+                    of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <p class="text-five"><i class="far fa-question-circle question-option"></i>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s … when an unknown printer took
+                    a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release
+                    of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <p class="btn-three">START NOW</p>
+            </div>
+            <div class="interface-three"></div>
+
+        </div>
+        <div class="menu-four">
+            <div class="interface-four"></div>
+            <div class="content-four">
+                <p class="text-one"><i class="fa-question-circle question-option"></i>Custumers</p>
+                <p class="text-two">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                <p class="text-three"><i class="far fa-question-circle question-option"></i>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s … when an unknown printer took
+                    a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release
+                    of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <p class="text-four"><i class="far fa-question-circle question-option"></i>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s … when an unknown printer took
+                    a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release
+                    of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <p class="text-five"><i class="far fa-question-circle question-option"></i>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s … when an unknown printer took
+                    a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release
+                    of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <p class="btn-four">START NOW</p>
+            </div>
+
+        </div>
+        <div class="menu-five">
+            <div class="content-top">Our customer</div>
+            <div class="background-between">
+                <div class="avartar-first"></div>
+                <div class="avartar-two"></div>
+                <div class="avartar-three"></div>
+                <div class="avartar-four"></div>
+                <div class="avartar-five"></div>
+                <div class="avartar-six"></div>
+                <div class="avartar-seven"></div>
+                <div class="avartar-eight"></div>
+            </div>
+            <div class="text-avartar">
+                <div class="text-avartar-first">
+                    <p>DuongNT <br> Designer
+                    </p>
+                </div>
+                <div class="text-avartar-two">
+                    <p>DuongNT <br> Designer
+                    </p>
+                </div>
+                <div class="text-avartar-three">
+                    <p>DuongNT <br> Designer
+                    </p>
+                </div>
+                <div class="text-avartar-four">
+                    <p>DuongNT <br> Designer
+                    </p>
+                </div>
+                <div class="text-avartar-five">
+                    <p>DuongNT <br> Designer
+                    </p>
+                </div>
+                <div class="text-avartar-six">
+                    <p>DuongNT <br> Designer
+                    </p>
+                </div>
+                <div class="text-avartar-seven">
+                    <p>DuongNT <br> Designer
+                    </p>
+                </div>
+                <div class="text-avartar-eight">
+                    <p>DuongNT <br> Designer
+                    </p>
+                </div>
+            </div>
+            <i class="far fa-question-circle question-our-customers-first"></i>
+            <div class="text-second">
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has <br> been the industry's standard dummy text ever since the 1500s, when an unknown printer took a <br> galley of type and scrambled it to make a
+                    type specimen book.</p>
+            </div>
+            <i class="far fa-question-circle question-our-customers-two"></i>
+        </div>
+        <div class="menu-two">
+            <div class="content-two">
+                <div class="right">
+                    <p class="right-one"><i class="fa-question-circle question-option"></i>Projects</p>
+                    <p class="right-two">Lorem Ipsum is simply dummy text of the printing and typesetting industry<br></p>
+                    <p class="right-three">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+                        specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
+                        passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                    <p class="btn-two">START NOW</p>
+                </div>
+                <div class="interface-two"></div>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="content-footer-one">
+                <p>hapoERP</p>
+                <h4>Copyright 2017</h4>
+            </div>
+            <div class="content-footer-two">
+                <p>get in touch</p>
+                <h4>Contact us <br> Contact Sales</h4>
+            </div>
+            <div class="content-footer-three">
+                <p>Learn more</p>
+                <h4>About us <br> About Hapo-ERP</h4>
+            </div>
+            <div class="content-footer-three">
+                <p>How to works</p>
+                <h4>About us <br> About Hapo-ERP</h4>
+            </div>
+            <div class="content-footer-three">
+                <p>legal</p>
+                <h4>Terms of Service <br> Privacy Policy</h4>
+            </div>
+            <div class="icon-footer">
+                <p><i class="far fa-question-circle question-our-customers-first"></i></p>
+                <p><i class="far fa-question-circle question-our-customers-first"></i></p>
+                <p><i class="far fa-question-circle question-our-customers-first"></i></p>
+                <p><i class="far fa-question-circle question-our-customers-first"></i></p>
+            </div>
+
         </div>
     </div>
 </body>
