--- a/demo/index.html
+++ b/demo/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" type="text/css" href="css/themify-icons/themify-icons.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
 </head>
 
 <body>
@@ -38,7 +37,7 @@
                 </div>
             </div>
             <p class="header-text-two"><i>Lorem Ipsum is simply dummy text of the printing and typesetting industrys</i></p>
-            <p class="start-now-header">START NOW</p>
+            <div class="start-now-header"><a href="#">START NOW</a></div>
         </div>
         <div class="menu-one">
             <div class="content-one">
@@ -253,5 +252,7 @@
         </div>
     </div>
 </body>
+
+</html>
 
 </html>
